--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
                                 <span class="text-xs font-normal hidden md:block opacity-80">Practice past habits and states.</span>
                             </div>
                         </button>
+                        <button id="start-be-vs-go-btn" class="w-full bg-sky-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-sky-700 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
+                            <div class="bg-sky-500 p-3 rounded-lg">
+                               <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg>
+                           </div>
+                           <div class="text-center h-10">
+                               <span class="font-semibold text-base hidden lg:inline">H. </span><span class="font-semibold text-base">Be vs Go</span>
+                               <span class="text-xs font-normal hidden md:block opacity-80">Learn the difference.</span>
+                           </div>
+                       </button>
                     </main>
                 </div>
 
