--- a/submodulos/compare.html
+++ b/submodulos/compare.html
@@ -35,26 +35,27 @@
         }
     </style>
 </head>
-<body class="bg-gray-50 text-gray-800 antialiased">
+<body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200 flex flex-col items-center justify-center min-h-screen">
 
-    <div class="container mx-auto p-4 sm:p-6 md:p-8 max-w-2xl bg-white rounded-xl shadow-lg">
+    <header class="text-center mb-10">
+        <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 dark:text-white tracking-tight">Domina "Be" vs. "Go"</h1>
+        <p class="mt-4 text-lg text-gray-600 dark:text-gray-400">Elige tu nivel de dificultad y pon a prueba tus conocimientos.</p>
+    </header>
+
+    <div class="container mx-auto p-4 sm:p-6 md:p-8 max-w-2xl bg-white dark:bg-gray-800 rounded-xl shadow-lg">
 
         <!-- Vista del Menú Principal -->
         <div id="main-menu-view">
-            <header class="text-center mb-10">
-                <h1 class="text-4xl sm:text-5xl font-extrabold text-gray-900 tracking-tight">Domina "Be" vs. "Go"</h1>
-                <p class="mt-4 text-lg text-gray-600">Elige tu nivel de dificultad y pon a prueba tus conocimientos.</p>
-            </header>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <!-- Botón Básico -->
-                <div onclick="startQuiz('basic')" class="main-menu-button cursor-pointer bg-white p-8 rounded-xl shadow-lg border border-gray-200 text-center">
-                    <h2 class="text-2xl font-bold text-indigo-600">Básico</h2>
-                    <p class="mt-2 text-gray-500">Ideal para reforzar los conceptos fundamentales que viste en el video.</p>
+                <div onclick="startQuiz('basic')" class="main-menu-button cursor-pointer bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg border border-gray-200 dark:border-gray-600 text-center">
+                    <h2 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">Básico</h2>
+                    <p class="mt-2 text-gray-500 dark:text-gray-400">Ideal para reforzar los conceptos fundamentales que viste en el video.</p>
                 </div>
                 <!-- Botón Avanzado -->
-                <div onclick="startQuiz('advanced')" class="main-menu-button cursor-pointer bg-white p-8 rounded-xl shadow-lg border border-gray-200 text-center">
-                    <h2 class="text-2xl font-bold text-red-600">Avanzado</h2>
-                    <p class="mt-2 text-gray-500">Preguntas de mayor dificultad con más contexto y diferentes tiempos verbales.</p>
+                <div onclick="startQuiz('advanced')" class="main-menu-button cursor-pointer bg-white dark:bg-gray-700 p-8 rounded-xl shadow-lg border border-gray-200 dark:border-gray-600 text-center">
+                    <h2 class="text-2xl font-bold text-red-600 dark:text-red-400">Avanzado</h2>
+                    <p class="mt-2 text-gray-500 dark:text-gray-400">Preguntas de mayor dificultad con más contexto y diferentes tiempos verbales.</p>
                 </div>
             </div>
         </div>
@@ -238,8 +239,8 @@
         }
 
     </script>
-    <footer class="fixed bottom-0 left-0 w-full bg-white dark:bg-gray-800 shadow-lg">
-        <div class="flex justify-around items-center max-w-2xl mx-auto p-2 rounded-full">
+    <footer class="w-full max-w-2xl mx-auto mt-4">
+        <div class="flex justify-around items-center bg-white dark:bg-gray-800 p-2 rounded-full shadow-lg">
             <a href="../index.html" class="p-3 text-gray-700 dark:text-gray-300 hover:text-teal-600 dark:hover:text-teal-400 rounded-full" title="Home">
                 <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
             </a>
