feat: ampliar preguntas de compare

--- a/submodulos/compare.html
+++ b/submodulos/compare.html
@@ -100,7 +100,19 @@
             { question: "5. I can't find my keys. Where have they ___?", options: ["been", "gone"], answer: "gone", explanation: "Correcto. Las llaves 'se han ido' a algún lugar y no están aquí ahora." },
             { question: "6. I'm so tired. I have ___ to the bank, the library, and the post office.", options: ["been", "gone"], answer: "been", explanation: "Correcto. Usamos 'have been' porque la persona ya regresó de todos esos lugares." },
             { question: "7. Have you ever ___ camping?", options: ["been", "gone"], answer: "gone", explanation: "Correcto. Con actividades, 'gone' es muy común para preguntar si alguna vez has realizado esa actividad." },
-            { question: "8. I'm not here right now. I have ___ to lunch.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Have gone to lunch' significa que la persona salió a almorzar y no está disponible." }
+            { question: "8. I'm not here right now. I have ___ to lunch.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Have gone to lunch' significa que la persona salió a almorzar y no está disponible." },
+            { question: "9. She has ___ to the gym every day this week.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Has been' indica que ha ido y regresado, o que la acción es recurrente." },
+            { question: "10. My sister isn't home. She has ___ to her friend's house.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Has gone' significa que se fue y aún no ha regresado." },
+            { question: "11. We have ___ to that restaurant many times.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been' se usa para experiencias pasadas donde ya se regresó." },
+            { question: "12. The children have ___ to bed already.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Have gone to bed' significa que se fueron a la cama y están allí." },
+            { question: "13. I've ___ to London twice.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been to' se usa para hablar de visitas a lugares." },
+            { question: "14. He's ___ on holiday to Spain.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Has gone on holiday' significa que está de vacaciones y no ha regresado." },
+            { question: "15. Have you ___ to the new museum yet?", options: ["been", "gone"], answer: "been", explanation: "Correcto. Se pregunta si ya se tuvo la experiencia de visitar el museo." },
+            { question: "16. She's not at her desk. She's ___ to a meeting.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Has gone to a meeting' significa que está en la reunión y no ha vuelto." },
+            { question: "17. I've ___ to the doctor's and he said I'm fine.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been to the doctor's' implica que ya regresó de la visita." },
+            { question: "18. They've ___ to the beach for the day.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Have gone to the beach' significa que están en la playa y no han regresado." },
+            { question: "19. My car has ___ to the garage for repairs.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Has gone to the garage' significa que el coche está en el taller." },
+            { question: "20. I've ___ to the supermarket, so we have plenty of food now.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been to the supermarket' indica que la persona ya regresó con la comida." }
         ];
 
         const advancedQuizData = [
@@ -111,7 +123,19 @@
             { question: "5. A: This restaurant is amazing! / B: I know! I've ___ here many times before.", options: ["been", "gone"], answer: "been", explanation: "Correcto. El contexto ('many times before') indica una experiencia repetida. La persona ha venido y se ha ido varias veces." },
             { question: "6. Last summer, we ___ swimming at the lake almost every day.", options: ["were", "went"], answer: "went", explanation: "Correcto. Se usa 'went' con actividades como 'swimming', 'hiking', 'shopping', etc." },
             { question: "7. The office is empty. It seems everyone has ___ home for the day.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. La oficina está vacía porque todos se han ido y no han regresado." },
-            { question: "8. He told me he had never ___ so scared in his entire life.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Been' se usa para describir estados o sentimientos. 'He had never been scared' (Él nunca había estado asustado)." }
+            { question: "8. He told me he had never ___ so scared in his entire life.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Been' se usa para describir estados o sentimientos. 'He had never been scared' (Él nunca había estado asustado)." },
+            { question: "9. After a long journey, they finally ___ home.", options: ["were", "went"], answer: "went", explanation: "Correcto. 'Went home' describe la acción de regresar a casa." },
+            { question: "10. She ___ a teacher for ten years before she retired.", options: ["was", "went"], answer: "was", explanation: "Correcto. 'Was a teacher' describe un estado o profesión en el pasado." },
+            { question: "11. My grandparents have ___ to visit us for the holidays.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been to visit' implica que ya vinieron y se fueron, o que la visita es una experiencia." },
+            { question: "12. The package ___ missing for a week before it was found.", options: ["was", "went"], answer: "was", explanation: "Correcto. 'Was missing' describe el estado del paquete." },
+            { question: "13. I'm exhausted because I've ___ running all morning.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been running' indica una acción que comenzó en el pasado y continúa o acaba de terminar." },
+            { question: "14. Where have you ___? I've been looking for you everywhere!", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Where have you been?' se usa para preguntar dónde estuvo alguien que ya regresó." },
+            { question: "15. He ___ to the store to buy some milk.", options: ["was", "went"], answer: "went", explanation: "Correcto. 'Went to the store' describe la acción de ir a la tienda." },
+            { question: "16. The children ___ very quiet, which made me suspicious.", options: ["were", "went"], answer: "were", explanation: "Correcto. 'Were very quiet' describe el estado de los niños." },
+            { question: "17. She has ___ to Paris three times this year for work.", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Has been to Paris' indica que ha visitado París y regresado en cada ocasión." },
+            { question: "18. My phone isn't here. It must have ___ somewhere.", options: ["been", "gone"], answer: "gone", explanation: "Correcto. 'Must have gone somewhere' significa que el teléfono se ha movido de su lugar." },
+            { question: "19. They ___ on a trip around the world last year.", options: ["were", "went"], answer: "went", explanation: "Correcto. 'Went on a trip' describe la acción de realizar un viaje." },
+            { question: "20. I've ___ to that concert before, it was amazing!", options: ["been", "gone"], answer: "been", explanation: "Correcto. 'Have been to that concert' se refiere a una experiencia pasada de asistir al concierto." }
         ];
 
         const quizzes = {
